--- a/home/dot_docker/config.json
+++ b/home/dot_docker/config.json
@@ -1,8 +1,7 @@
 {
-  "auths": {
-    "https://index.docker.io/v1/": {}
-  },
-  "credsStore": "desktop",
-  "currentContext": "default",
-  "stackOrchestrator": "swarm"
+	"auths": {
+		"https://index.docker.io/v1/": {}
+	},
+	"credsStore": "desktop",
+	"currentContext": "default"
 }
