--- a/home/dot_docker/config.json
+++ b/home/dot_docker/config.json
@@ -2,6 +2,6 @@
 	"auths": {
 		"https://index.docker.io/v1/": {}
 	},
-	"credsStore": "desktop",
+	"credsStore": "wincred",
 	"currentContext": "default"
 }
