--- a/home/AppData/Roaming/ghc/ghci.conf
+++ b/home/AppData/Roaming/ghc/ghci.conf
@@ -14,46 +14,46 @@ import Data.List
 
 -- https://limperg.de/ghc-extensions/
 :set prompt ">"
-seti -XExplicitForAll
-seti -XFunctionalDependencies
-seti -XViewPatterns
-seti -XPatternSynonyms
-seti -XKindSignatures
-seti -XLambdaCase
-seti -XNamedFieldPuns
-seti -XRecordWildCards
-seti -XFunctionalDependencies
-seti -XGADTSyntax
-seti -XGADTs
-seti -XConstraintKinds
-seti -XDataKinds
-seti -XNumericUnderscores
-seti -XGeneralizedNewtypeDeriving
-seti -XInstanceSigs
-seti -XConstrainedClassMethods
-seti -XExistentialQuantification
-seti -XTypeFamilies
-seti -XDefaultSignatures
-seti -XDisambiguateRecordFields
-seti -XDuplicateRecordFields
+:seti -XExplicitForAll
+:seti -XFunctionalDependencies
+:seti -XViewPatterns
+:seti -XPatternSynonyms
+:seti -XKindSignatures
+:seti -XLambdaCase
+:seti -XNamedFieldPuns
+:seti -XRecordWildCards
+:seti -XFunctionalDependencies
+:seti -XGADTSyntax
+:seti -XGADTs
+:seti -XConstraintKinds
+:seti -XDataKinds
+:seti -XNumericUnderscores
+:seti -XGeneralizedNewtypeDeriving
+:seti -XInstanceSigs
+:seti -XConstrainedClassMethods
+:seti -XExistentialQuantification
+:seti -XTypeFamilies
+:seti -XDefaultSignatures
+:seti -XDisambiguateRecordFields
+:seti -XDuplicateRecordFields
 -- https://codetalk.io/posts/2020-04-05-common-json-patterns-in-haskell-rust-and-javascript.html#get-a-field
 -- Allows us to have multiple record fields of the same name in scope. Prepend name with '#'.
-seti -XOverloadedLabels
-seti -XBangPatterns
-seti -XApplicativeDo
-seti -XNegativeLiterals
-seti -XTypeOperators
+:seti -XOverloadedLabels
+:seti -XBangPatterns
+:seti -XApplicativeDo
+:seti -XNegativeLiterals
+:seti -XTypeOperators
 -- https://stackoverflow.com/questions/50788238/haskell-multi-way-if-expressions-need-multiwayif-turned-on
-seti -XMultiWayIf
+:seti -XMultiWayIf
 -- https://sodocumentation.net/haskell/topic/1274/common-ghc-language-extensions
-seti -XOverloadedStrings
-seti -XUnicodeSyntax
-seti -XBinaryLiterals
-seti -XOverloadedLists
+:seti -XOverloadedStrings
+:seti -XUnicodeSyntax
+:seti -XBinaryLiterals
+:seti -XOverloadedLists
 -- https://rebeccaskinner.net/posts/2021-08-25-introduction-to-type-level-programming.html
-seti -XPolyKinds
--- seti -XAllowAmbiguousTypes
+:seti -XPolyKinds
+-- :seti -XAllowAmbiguousTypes
 
 -- https://raehik.github.io/2022/10/07/ghc2021-in-2022.html
-seti -XDerivingStrategies
-seti -XNoStarIsType
+:seti -XDerivingStrategies
+:seti -XNoStarIsType
