--- a/home/AppData/Roaming/ghc/ghci.conf
+++ b/home/AppData/Roaming/ghc/ghci.conf
@@ -57,3 +57,6 @@ import Data.List
 -- https://raehik.github.io/2022/10/07/ghc2021-in-2022.html
 :seti -XDerivingStrategies
 :seti -XNoStarIsType
+
+# https://alt-romes.github.io/posts/2023-11-30-computed-properties-for-haskell-records.html
+:seti -XOverloadedRecordDot
