:art: Update ghci prompt.

--- a/home/AppData/Roaming/ghc/ghci.conf
+++ b/home/AppData/Roaming/ghc/ghci.conf
@@ -12,8 +12,11 @@ import Data.List
 :set -Wall -Wincomplete-record-updates
 :set -Wno-type-defaults
 
+-- https://typeclasses.com/ghci/config
+:set prompt "\x03BB> "
+:set prompt-cont " > "
+
 -- https://limperg.de/ghc-extensions/
-:set prompt ">"
 :seti -XExplicitForAll
 :seti -XFunctionalDependencies
 :seti -XViewPatterns
