--- a/home/AppData/Roaming/bat/config
+++ b/home/AppData/Roaming/bat/config
@@ -24,6 +24,9 @@
 #--map-syntax "*.ino:C++"
 #--map-syntax ".ignore:Git Ignore"
 
+--map-syntax "*.qmd:Markdown"
 --map-syntax "*.Rmd:Markdown"
 --map-syntax "*.csproj:XML"
 --map-syntax "*.ps1xml:XML"
+--map-syntax "Directory.*.props:XML"
+--map-syntax "Directory.*.targets:XML"
