--- a/home/dot_docker/config.json
+++ b/home/dot_docker/config.json
@@ -3,5 +3,10 @@
 		"https://index.docker.io/v1/": {}
 	},
 	"credsStore": "wincred",
-	"currentContext": "default"
+	"currentContext": "default",
+	"plugins": {
+		"-x-cli-hints": {
+			"enabled": "true"
+		}
+	}
 }
