Add conda profile for wt.

--- a/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
+++ b/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
@@ -1,10 +1,10 @@
 {
     "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
-    "actions":
+    "actions": 
     [
         {
-            "command":
+            "command": 
             {
                 "action": "copy",
                 "singleLine": false
@@ -16,7 +16,7 @@
             "keys": "ctrl+v"
         },
         {
-            "command":
+            "command": 
             {
                 "action": "splitPane",
                 "split": "auto",
@@ -33,30 +33,30 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{01201329-03d9-413b-ba6b-ce86f4862626}",
-    "newTabMenu":
+    "newTabMenu": 
     [
         {
             "type": "remainingProfiles"
         }
     ],
-    "profiles":
+    "profiles": 
     {
-        "defaults":
+        "defaults": 
         {
-            "font":
+            "font": 
             {
                 "face": "CaskaydiaMono Nerd Font Mono",
                 "size": 14.0
             }
         },
-        "list":
+        "list": 
         [
             {
                 "colorScheme": "Tango Dark",
                 "commandline": "\"C:\\Program Files\\PowerShell\\7\\pwsh.exe\"",
                 "elevate": true,
                 "experimental.retroTerminalEffect": false,
-                "font":
+                "font": 
                 {
                     "face": "MonaspiceNe Nerd Font Mono"
                 },
@@ -68,7 +68,7 @@
             },
             {
                 "colorScheme": "Tango Dark",
-                "font":
+                "font": 
                 {
                     "face": "DejaVuSansM Nerd Font Mono"
                 },
@@ -78,7 +78,8 @@
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
-                "font": {
+                "font": 
+                {
                     "face": "MonaspiceKr Nerd Font Mono"
                 },
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
@@ -89,7 +90,7 @@
             {
                 "colorScheme": "Solarized Dark",
                 "commandline": "%SystemRoot%\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
-                "font":
+                "font": 
                 {
                     "face": "DejaVuSansM Nerd Font Mono"
                 },
@@ -97,10 +98,9 @@
                 "hidden": false,
                 "name": "Windows PowerShell"
             },
-
             {
                 "commandline": "%SystemRoot%\\System32\\cmd.exe",
-                "font":
+                "font": 
                 {
                     "face": "FiraCode Nerd Font Mono"
                 },
@@ -113,10 +113,32 @@
                 "hidden": false,
                 "name": "Developer Command Prompt for VS 2022",
                 "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "altGrAliasing": true,
+                "antialiasingMode": "grayscale",
+                "closeOnExit": "automatic",
+                "colorScheme": "Campbell",
+                "commandline": "%SystemRoot%\\System32\\cmd.exe \"/K\" D:\\Apps\\Miniconda\\Scripts\\activate.bat D:\\Apps\\Miniconda  ",
+                "cursorShape": "bar",
+                "elevate": true,
+                "font": 
+                {
+                    "face": "JuliaMono"
+                },
+                "guid": "{2a77b363-cce6-4a8a-bb8e-5427e2e0daf7}",
+                "hidden": false,
+                "historySize": 9001,
+                "icon": "D:\\Apps\\miniconda\\Menu\\Iconleak-Atrous-Console.ico",
+                "name": "Conda",
+                "padding": "8, 8, 8, 8",
+                "snapOnInput": true,
+                "startingDirectory": "%HOME%",
+                "useAcrylic": false
             }
         ]
     },
-    "schemes":
+    "schemes": 
     [
         {
             "background": "#0C0C0C",
