Update bat config.

--- a/home/AppData/Roaming/bat/config
+++ b/home/AppData/Roaming/bat/config
@@ -30,3 +30,5 @@
 --map-syntax "*.ps1xml:XML"
 --map-syntax "Directory.*.props:XML"
 --map-syntax "Directory.*.targets:XML"
+--map-syntax "*.slnx:XML"
+--map-syntax "*.vsconfig:JSON"
