--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,5 @@
         "titleBar.inactiveBackground": "#71bfa399",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#71bfa3"
+    "peacock.color": "#71bfa3",
 }
