Change portable pkg install dir for winget.

--- a/home/AppData/Local/Packages/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe/LocalState/settings.json
+++ b/home/AppData/Local/Packages/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe/LocalState/settings.json
@@ -5,7 +5,7 @@
     //    "autoUpdateIntervalInMinutes": 5
     // },
     "installBehavior": {
-        "portablePackageUserRoot": "D:/Apps",
+        "portablePackageUserRoot": "D:/Apps/Packages",
         "portablePackageMachineRoot": "D:/Program Files/Packages/Portable"
     },
     "telemetry": {
