--- a/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
+++ b/home/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/settings.json
@@ -4,6 +4,14 @@
     "actions": 
     [
         {
+            "command": 
+            {
+                "action": "copy",
+                "singleLine": false
+            },
+            "id": "User.copy.644BA8F2"
+        },
+        {
             "command": "unbound",
             "keys": "ctrl+v"
         },
@@ -12,14 +20,8 @@
             "keys": "ctrl+c"
         },
         {
-            "command": 
-            {
-                "action": "copy",
-                "singleLine": false
-            }
-        },
-        {
-            "command": "paste"
+            "command": "paste",
+            "id": "User.paste"
         },
         {
             "command": 
@@ -82,7 +84,9 @@
                 },
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
+                "historySize": 999999,
                 "name": "PowerShell",
+                "showMarksOnScrollbar": true,
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
@@ -150,6 +154,18 @@
                 "hidden": true,
                 "name": "Visual Studio Debug Console",
                 "source": "VSDebugConsole"
+            },
+            {
+                "guid": "{6e9049ed-3051-5e8a-8a3d-50789b4294c9}",
+                "hidden": false,
+                "name": "Developer Command Prompt for VS 2022 (2)",
+                "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "guid": "{b4cac8fb-7fab-591b-87d7-9439740a962d}",
+                "hidden": false,
+                "name": "Developer PowerShell for VS 2022 (2)",
+                "source": "Windows.Terminal.VisualStudio"
             }
         ]
     },
