Update settings for winget CLI

--- a/home/AppData/Local/Packages/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe/LocalState/settings.json
+++ b/home/AppData/Local/Packages/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe/LocalState/settings.json
@@ -5,10 +5,14 @@
     //    "autoUpdateIntervalInMinutes": 5
     // },
     "installBehavior": {
+        "disableInstallNotes": false,
         "portablePackageUserRoot": "D:/Apps/Packages",
         "portablePackageMachineRoot": "D:/Program Files/Packages/Portable"
     },
     "telemetry": {
         "disable": true
+    },
+    "visual": {
+        "enableSixels": true
     }
 }
