--- a/home/dot_aider/dot_aider.conf.yml
+++ b/home/dot_aider/dot_aider.conf.yml
@@ -11,6 +11,16 @@ timeout: 20
 
 edit-format: whole
 
+# Specify model-specific settings
+model-settings-file: .aider.model.settings.yml
+
+show-model-warnings: false
+
+alias:
+  - "mixtral:ollama_chat/mixtral:8x7b"
+  - "code:ollama_chat/qwen2.5-coder:14b"
+  - "llama:ollama_chat/llama3.2:latest"
+
 ########
 # Cache:
 
@@ -62,6 +72,19 @@ gitignore: true
 dry-run: false
 
 watch-files: false
+
+commit-prompt: |
+  You are an expert software engineer that generates concise, one-line Git commit messages based on the provided diffs.
+  Review the provided context and diffs which are about to be committed to a git repo.
+  Review the diffs carefully.
+  Generate a one-line commit message for those changes.
+  The commit message should be structured as follows: <type>: <description>
+  Use these for <type>: fix, feat, build, chore, ci, docs, style, refactor, perf, test
+
+  Ensure the commit message:
+  - Starts with the appropriate prefix.
+  - Is in the imperative mood (e.g., "add feature" not "added feature" or "adding feature").
+  - Does not exceed 72 characters.
 
 ########################
 # Fixing and committing:
