--- a/home/dot_aider/dot_aider.conf.yml
+++ b/home/dot_aider/dot_aider.conf.yml
@@ -82,9 +82,9 @@ commit-prompt: |
   Use these for <type>: fix, feat, build, chore, ci, docs, style, refactor, perf, test
 
   Ensure the commit message:
-  - Starts with the appropriate prefix.
-  - Is in the imperative mood (e.g., "add feature" not "added feature" or "adding feature").
-  - Does not exceed 72 characters.
+  1. Starts with the appropriate prefix.
+  2. Is in the imperative mood (e.g., "add feature" not "added feature" or "adding feature").
+  3. Does not exceed 72 characters.
 
 ########################
 # Fixing and committing:
